Fixed vertical spacing for wide size

--- a/src/components/react/DoAndDont/DoAndDont.css
+++ b/src/components/react/DoAndDont/DoAndDont.css
@@ -7,6 +7,7 @@
 
 .do-and-dont-container.do-and-dont-container-wide {
   grid-template-columns: 1fr;
+  gap: 3rem;
 }
 .do-and-dont-container-wide
   .do-and-dont-example-item
@@ -21,7 +22,7 @@
   justify-content: space-between;
   aspect-ratio: 1 / 0.7;
   padding: 1rem 1.5rem 2rem 1.5rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 .do-and-dont-example-content-do {
